--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.1.3",
     "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
+    "@ngrx/effects": "^7.4.0",
+    "@ngrx/store": "^7.4.0",
+    "@ngrx/store-devtools": "^7.4.0",
     "bootstrap": "^4.0.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
